<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="currency">Currency</string>
    <string name="request">Request</string>
    <string name="address">Address</string>
    <string name="client_port">Port</string>
</resources>
